@@ -3,10 +3,10 @@ package fr.bluechipit.divers;
 public class RefValue {
 
 	public static void changeRef(Integer integer){
-		integer = new Integer("5");
+		integer = Integer.valueOf("5");
 	}
 	public static void main(String[] args){
-		Integer integer = new Integer("6");
+		Integer integer = Integer.valueOf("6");
 		RefValue.changeRef(integer);
 		System.out.println("integer="+integer);
 	}
